fixed bug with tickers

--- a/05_download_adjustments.ipynb
+++ b/05_download_adjustments.ipynb
@@ -423,8 +423,15 @@
    "metadata": {},
    "source": [
     "### Updates\n",
-    "Simply rerun the file with the correct <code>END_DATE</code> and set <code>CLEAN_DOWNLOAD</code> to False. The code is already structured in such a way that only the necessary is downloaded. "
+    "Simply rerun the file with the correct <code>END_DATE</code> and set <code>CLEAN_DOWNLOAD</code> to False. The code is already structured in such a way that only the necessary is downloaded. Also, dividends have to be split adjusted. The code is below."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
