--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "from tickers import get_tickers\n",
     "from times import get_market_calendar\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,34 +1315,29 @@
    "metadata": {},
    "source": [
     "# 7.5 Putting it all in a loop\n",
-    "Later on, I got an error which was caused by stock prices being negative. This is caused by some special events (with a dividend type of 'SC'), where Polygon has already adjusted for it... We avoid this problem by manually deleting the dividend in the adjustment:\n",
+    "Later on, I got an error which was caused by stock prices being negative. This is caused by some special events (with a dividend type of 'SC'), where Polygon has already adjusted for it... We avoid this problem by manually deleting the dividend/split in the adjustment:\n",
     "* GEN: 2020-02-03\n",
-    "* LIAN: 2024-02-26"
+    "* LIAN: 2024-02-26\n",
+    "* BBVA: 2014-12-17 (split)\n",
+    "* IRSA: the dividends are NOT split adjusted. Split adjust manually.\n",
+    "* KELYB: remove the 2015-05-14 dividend and add it to the dividend before. This ticker has almost no data. Same with 2018-05-21.\n",
+    "* KGC: remove the 2004-12-05 and 2004-12-06 split.\n",
+    "* SFE: remove the 2024-01-16 split. Apparently sometimes companies do a 100-to-1 and 1-to-100 at the same time to weed out shareholders that have less than 100 shares in some rare scenarios. When one of the two misses, we may get very incorrect prices.\n",
+    "* SPC: I have no idea what happened here. The stock price from 2005-2008 went from 40 to 0. No stock splits found. The ticker went delisted and then came back as SPB. However when looking at the TradingView charts, the price didn't seem to move much. I also couldn't find any dividends in the period 2005-2008 online. I will simply delete the dividend file.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There is no data for AMDI-2024-02-13\n",
-      "There is no data for ANTE-2015-05-07\n",
-      "There is no data for ARBR-2011-05-11\n",
-      "There is no data for ARGB-2004-05-28\n",
-      "There is no data for ARGS-2012-03-01\n",
-      "There is no data for ARNN-2004-02-25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tickers_v3 = get_tickers(v=3)\n",
     "for index, row in tickers_v3.iterrows():\n",
     "    id = row['ID']\n",
     "    ticker = row[\"ticker\"]\n",
+    "    if not ((ticker[-1] == 'A' or ticker[-1] == 'B') and len(ticker) == 5):\n",
+    "        continue\n",
     "    start_date = row['start_date']\n",
     "    end_date = row['end_date']\n",
     "\n",
@@ -1346,12 +1350,12 @@
     "            ],\n",
     "        )\n",
     "    except FileNotFoundError:\n",
-    "        print(f\"There is no data for {id}\")\n",
+    "        #print(f\"There is no data for {id}\")\n",
     "        continue\n",
     "\n",
     "    bars = dataset.read().to_pandas()\n",
     "    if bars.empty:\n",
-    "        print(f\"There is no data for {id}\")\n",
+    "        #print(f\"There is no data for {id}\")\n",
     "        continue\n",
     "\n",
     "    # ADJUSTING\n",
@@ -1366,7 +1370,8 @@
     "    all_adjusted['turnover'] = all_adjusted['turnover'].astype(int)\n",
     "\n",
     "    if (all_adjusted['close'] < 0).any():\n",
-    "        raise Exception(f'{id} has negative prices!')\n",
+    "        print(f'{id} has negative prices!')\n",
+    "        #raise Exception(f'{id} has negative prices!')\n",
     "    \n",
     "    all_adjusted.to_parquet(DATA_PATH + f\"processed/m1/{id}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)"
    ]
@@ -1411,7 +1416,7 @@
     "    end_data = max_date.to_pydatetime().date()\n",
     "    \n",
     "    tickers_v3.loc[tickers_v3['ID'] == id, [\"start_data\", \"end_data\"] ] = [start_data, end_data]\n",
-    "\n",
+    "    \n",
     "tickers_v3.reset_index(inplace=True)\n",
     "tickers_v3[[\"ID\", \"ticker\", \"name\", \"active\", \"start_date\", \"end_date\", \"start_data\", \"end_data\", \"type\", \"cik\", \"composite_figi\"]].to_csv(\"../data/tickers_v4.csv\")"
    ]
@@ -1456,38 +1461,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A-2019-06-03</td>\n",
+       "      <td>A-2003-09-10</td>\n",
        "      <td>A</td>\n",
-       "      <td>Agilent Technologies Inc.</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <td>AGILENT TECHNOLOGIES, INC</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2005-11-22</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2005-11-22</td>\n",
        "      <td>CS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AA-2019-06-03</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>Alcoa Corporation</td>\n",
+       "      <td>A-2005-12-14</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Agilent Technologies Inc.</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <td>2005-12-14</td>\n",
+       "      <td>2024-04-19</td>\n",
+       "      <td>2005-12-14</td>\n",
+       "      <td>2024-04-19</td>\n",
        "      <td>CS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AABA-2019-06-03</td>\n",
-       "      <td>AABA</td>\n",
-       "      <td>Altaba Inc. Common Stock</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2019-10-04</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2019-10-02</td>\n",
+       "      <td>AA-2003-09-10</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>Alcoa Corporation</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2024-04-19</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2024-04-19</td>\n",
        "      <td>CS</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1495,18 +1500,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                ID ticker                       name  active  start_date  \\\n",
-       "0     A-2019-06-03      A  Agilent Technologies Inc.    True  2019-06-03   \n",
-       "1    AA-2019-06-03     AA          Alcoa Corporation    True  2019-06-03   \n",
-       "2  AABA-2019-06-03   AABA   Altaba Inc. Common Stock   False  2019-06-03   \n",
+       "              ID ticker                       name  active  start_date  \\\n",
+       "0   A-2003-09-10      A  AGILENT TECHNOLOGIES, INC   False  2003-09-10   \n",
+       "1   A-2005-12-14      A  Agilent Technologies Inc.    True  2005-12-14   \n",
+       "2  AA-2003-09-10     AA          Alcoa Corporation    True  2003-09-10   \n",
        "\n",
        "     end_date  start_data    end_data type  \n",
-       "0  2024-04-15  2019-06-03  2024-04-15   CS  \n",
-       "1  2024-04-15  2019-06-03  2024-04-15   CS  \n",
-       "2  2019-10-04  2019-06-03  2019-10-02   CS  "
+       "0  2005-11-22  2003-09-10  2005-11-22   CS  \n",
+       "1  2024-04-19  2005-12-14  2024-04-19   CS  \n",
+       "2  2024-04-19  2003-09-10  2024-04-19   CS  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1033\n"
+      "280\n"
      ]
     },
     {
@@ -1571,37 +1576,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AACQ-2020-09-04</td>\n",
-       "      <td>AACQ</td>\n",
-       "      <td>Artius Acquisition Inc. Class A Common Stock</td>\n",
+       "      <th>4</th>\n",
+       "      <td>AAAA-2007-10-31</td>\n",
+       "      <td>AAAA</td>\n",
+       "      <td>ALTAS INDUSRIES HOLDINGS LLC COM</td>\n",
        "      <td>False</td>\n",
-       "      <td>2020-09-04</td>\n",
-       "      <td>2021-06-24</td>\n",
+       "      <td>2007-10-31</td>\n",
+       "      <td>2007-11-29</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "      <td>CS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>AAXN-2019-06-03</td>\n",
-       "      <td>AAXN</td>\n",
-       "      <td>Axon Enterprise, Inc. Common Stock</td>\n",
+       "      <th>5</th>\n",
+       "      <td>AAAP-2015-02-04</td>\n",
+       "      <td>AAAP</td>\n",
+       "      <td>ADVANCED ACCELERATOR APPLICATIONS S A SPONSORE...</td>\n",
        "      <td>False</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2021-01-25</td>\n",
+       "      <td>2015-02-04</td>\n",
+       "      <td>2015-02-05</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>CS</td>\n",
+       "      <td>ADRC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>AAXN-2023-09-08</td>\n",
-       "      <td>AAXN</td>\n",
-       "      <td>Axon Enterprise, Inc. Common Stock</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023-09-08</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <th>113</th>\n",
+       "      <td>ABPI-2005-07-01</td>\n",
+       "      <td>ABPI</td>\n",
+       "      <td>ACCENTIA BIOPHARMACEUTICALS, INC.</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2005-07-01</td>\n",
+       "      <td>2005-07-22</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "      <td>CS</td>\n",
@@ -1611,24 +1616,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                 ID ticker                                          name  \\\n",
-       "7   AACQ-2020-09-04   AACQ  Artius Acquisition Inc. Class A Common Stock   \n",
-       "25  AAXN-2019-06-03   AAXN            Axon Enterprise, Inc. Common Stock   \n",
-       "26  AAXN-2023-09-08   AAXN            Axon Enterprise, Inc. Common Stock   \n",
+       "                  ID ticker  \\\n",
+       "4    AAAA-2007-10-31   AAAA   \n",
+       "5    AAAP-2015-02-04   AAAP   \n",
+       "113  ABPI-2005-07-01   ABPI   \n",
        "\n",
-       "    active  start_date    end_date start_data end_data type  \n",
-       "7    False  2020-09-04  2021-06-24        NaT      NaT   CS  \n",
-       "25   False  2019-06-03  2021-01-25        NaT      NaT   CS  \n",
-       "26    True  2023-09-08  2024-04-15        NaT      NaT   CS  "
+       "                                                  name  active  start_date  \\\n",
+       "4                     ALTAS INDUSRIES HOLDINGS LLC COM   False  2007-10-31   \n",
+       "5    ADVANCED ACCELERATOR APPLICATIONS S A SPONSORE...   False  2015-02-04   \n",
+       "113                  ACCENTIA BIOPHARMACEUTICALS, INC.   False  2005-07-01   \n",
+       "\n",
+       "       end_date start_data end_data  type  \n",
+       "4    2007-11-29        NaT      NaT    CS  \n",
+       "5    2015-02-05        NaT      NaT  ADRC  \n",
+       "113  2005-07-22        NaT      NaT    CS  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "zero_data = tickers_v4[(tickers_v4['start_data'].isna() & (tickers_v4['type'] != \"INDEX\"))]\n",
+    "zero_data = tickers_v4[tickers_v4['start_data'].isna()]\n",
     "print(len(zero_data))\n",
     "zero_data.iloc[:3, :9].head(3)"
    ]
