removed some incorrect classified funds, added SIC codes from EDGAR API

--- a/03_tickers.ipynb
+++ b/03_tickers.ipynb
@@ -3134,7 +3134,9 @@
     "        or \"aberdeen\" in s.lower().split() \\\n",
     "        or \"barings,\" in s.lower().split() \\\n",
     "        or \"blackrock\" in s.lower().split() \\\n",
+    "        or \"barclays\" in s.lower().split() \\\n",
     "        or \"bldrs\" in s.lower().split() \\\n",
+    "        or \"contigent\" in s.lower().split() \\\n",
     "        or \"citigroup\" in s.lower().split() \\\n",
     "        or \"direxion\" in s.lower().split() \\\n",
     "        or \"mfs\" in s.lower().split() \\\n",
@@ -3170,6 +3172,23 @@
     "        or \"structrd\" in s.lower().split() \\\n",
     "        or \"structurd\" in s.lower().split() \\\n",
     "        or \"putnam\" in s.lower().split() \\\n",
+    "        or \"citigrp\" in s.lower().split() \\\n",
+    "        or \"citigp\" in s.lower().split() \\\n",
+    "        or \"citicgroup\" in s.lower().split() \\\n",
+    "        or \"mrgn\" in s.lower().split() \\\n",
+    "        or \"lnk\" in s.lower().split() \\    \n",
+    "        or \"pines\" in s.lower().split() \\\n",
+    "        or \"cert\" in s.lower().split() \\\n",
+    "        or \"certificate\" in s.lower().split() \\\n",
+    "        or \"lkd\" in s.lower().split() \\  \n",
+    "        or \"lknd\" in s.lower().split() \\\n",
+    "        or \"velocityshs\" in s.lower().split() \\\n",
+    "        or \"structred\" in s.lower().split() \\\n",
+    "        or \"struct\" in s.lower().split() \\\n",
+    "        or \"nt\" in s.lower().split()\\\n",
+    "        or \"unit\" in s.lower().split()\\\n",
+    "        or \"units\" in s.lower().split()\\\n",
+    "        or \"\\\"quids\\\"\" in s.lower().split() \\       \n",
     "        or (\"pioneer\" in s.lower().split() and \"trust\" in s.lower().split()) \\\n",
     "        )\n",
     "\n",
