--- a/13_fundamentals.ipynb
+++ b/13_fundamentals.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "source": [
     "### Analysis\n",
-    "96.5% of stocks have market cap data or sic codes. Let's look at the stocks that don't. (We will filter on stocks that have a history larger than 60 days, because for short listings there won't be fundamental data.)"
+    "96.5% of stocks have market cap data and 83% has sic codes. Let's look at the stocks that don't. (We will filter on stocks that have a history larger than 60 days, because for short listings there won't be fundamental data.)"
    ]
   },
   {
