--- a/08_renamings.ipynb
+++ b/08_renamings.ipynb
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "from tickers import get_tickers, get_ticker_changes\n",
     "from times import get_market_dates, get_market_calendar, last_trading_date_before\n",
@@ -298,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "827\n"
+      "1010\n"
      ]
     },
     {
@@ -345,16 +354,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4344</th>\n",
+       "      <th>9439</th>\n",
        "      <td>META-2022-06-09</td>\n",
        "      <td>META</td>\n",
-       "      <td>[['2022-06-09', 'FB']]</td>\n",
+       "      <td>{'2022-06-09': 'FB'}</td>\n",
        "      <td>Meta Platforms, Inc. Class A Common Stock</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <td>2012-05-18</td>\n",
+       "      <td>2024-04-19</td>\n",
+       "      <td>2012-05-18</td>\n",
+       "      <td>2024-04-19</td>\n",
        "      <td>CS</td>\n",
        "      <td>1326801.0</td>\n",
        "      <td>BBG000MM2P62</td>\n",
@@ -364,17 +373,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                   ID ticker             tickers_old  \\\n",
-       "4344  META-2022-06-09   META  [['2022-06-09', 'FB']]   \n",
+       "                   ID ticker           tickers_old  \\\n",
+       "9439  META-2022-06-09   META  {'2022-06-09': 'FB'}   \n",
        "\n",
        "                                           name  active  start_date  \\\n",
-       "4344  Meta Platforms, Inc. Class A Common Stock    True  2019-06-03   \n",
+       "9439  Meta Platforms, Inc. Class A Common Stock    True  2012-05-18   \n",
        "\n",
        "        end_date  start_data    end_data type        cik composite_figi  \n",
-       "4344  2024-04-15  2019-06-03  2024-04-15   CS  1326801.0   BBG000MM2P62  "
+       "9439  2024-04-19  2012-05-18  2024-04-19   CS  1326801.0   BBG000MM2P62  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "25\n"
      ]
     },
     {
@@ -442,33 +451,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2366</th>\n",
-       "      <td>ERNA-2022-10-17</td>\n",
-       "      <td>ERNA</td>\n",
-       "      <td>[['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]</td>\n",
-       "      <td>Eterna Therapeutics Inc. Common Stock</td>\n",
+       "      <th>200</th>\n",
+       "      <td>ACNT-2022-08-11</td>\n",
+       "      <td>ACNT</td>\n",
+       "      <td>{'2022-08-11': 'SYNL', '2003-10-06': 'SYNC'}</td>\n",
+       "      <td>Ascent Industries Co. Common Stock</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2024-04-19</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2024-04-18</td>\n",
        "      <td>CS</td>\n",
-       "      <td>748592.0</td>\n",
-       "      <td>BBG000CX5677</td>\n",
+       "      <td>95953.0</td>\n",
+       "      <td>BBG000CLRHW7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2692</th>\n",
-       "      <td>FRGT-2022-05-27</td>\n",
-       "      <td>FRGT</td>\n",
-       "      <td>[['2022-05-27', 'HUSN'], ['2020-05-08', 'CIFS']]</td>\n",
-       "      <td>Freight Technologies, Inc. Ordinary Shares</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
-       "      <td>2019-06-03</td>\n",
-       "      <td>2024-04-15</td>\n",
+       "      <th>442</th>\n",
+       "      <td>AGN-2015-06-15</td>\n",
+       "      <td>AGN</td>\n",
+       "      <td>{'2015-06-15': 'ACT', '2013-01-24': 'WPI'}</td>\n",
+       "      <td>Allergan plc</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2020-05-08</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2020-05-08</td>\n",
        "      <td>CS</td>\n",
-       "      <td>1687542.0</td>\n",
+       "      <td>1578845.0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -476,24 +485,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                   ID ticker  \\\n",
-       "2366  ERNA-2022-10-17   ERNA   \n",
-       "2692  FRGT-2022-05-27   FRGT   \n",
+       "                  ID ticker                                   tickers_old  \\\n",
+       "200  ACNT-2022-08-11   ACNT  {'2022-08-11': 'SYNL', '2003-10-06': 'SYNC'}   \n",
+       "442   AGN-2015-06-15    AGN    {'2015-06-15': 'ACT', '2013-01-24': 'WPI'}   \n",
        "\n",
-       "                                           tickers_old  \\\n",
-       "2366    [['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]   \n",
-       "2692  [['2022-05-27', 'HUSN'], ['2020-05-08', 'CIFS']]   \n",
+       "                                   name  active  start_date    end_date  \\\n",
+       "200  Ascent Industries Co. Common Stock    True  2003-09-10  2024-04-19   \n",
+       "442                        Allergan plc   False  2003-09-10  2020-05-08   \n",
        "\n",
-       "                                            name  active  start_date  \\\n",
-       "2366       Eterna Therapeutics Inc. Common Stock    True  2019-06-03   \n",
-       "2692  Freight Technologies, Inc. Ordinary Shares    True  2019-06-03   \n",
-       "\n",
-       "        end_date  start_data    end_data type        cik composite_figi  \n",
-       "2366  2024-04-15  2019-06-03  2024-04-15   CS   748592.0   BBG000CX5677  \n",
-       "2692  2024-04-15  2019-06-03  2024-04-15   CS  1687542.0                 "
+       "     start_data    end_data type        cik composite_figi  \n",
+       "200  2003-09-10  2024-04-18   CS    95953.0   BBG000CLRHW7  \n",
+       "442  2003-09-10  2020-05-08   CS  1578845.0                 "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
